force-app/main/default/objects/Payment__c/fields/Check_number__c.field-meta.xml
<CustomField>
    <fullName>Check_number__c</fullName>
    <label>Check number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>