force-app/main/default/objects/Payment__c/fields/Initial_reimbursement_request_score__c.field-meta.xml
<CustomField>
    <fullName>Initial_reimbursement_request_score__c</fullName>
    <label>Initial reimbursement request score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>