force-app/main/default/objects/Payment__c/fields/Payment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payment_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>