force-app/main/default/objects/Payment__c/fields/Reimbursement_payment_approval_date__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_payment_approval_date__c</fullName>
    <label>Reimbursement/payment approval date</label>
    <type>Date</type>
</CustomField>